--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,11 +16,29 @@ jobs:
       - checkout
       - run:
           name: "Say hello"
-          command: "cho Hello, World!"
+          command: "echo Hello, World!"
+  print_hello:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - run:
+          name: "Hello"
+          command: "echo Hello"
+  print_world:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - run:
+          name: "World"
+          command: "echo World"
 
 # Orchestrate jobs using workflows
 # See: https://circleci.com/docs/configuration-reference/#workflows
 workflows:
   say-hello-workflow:
     jobs:
+      - print_hello
+      - print_world
       - say-hello
