--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,9 @@ jobs:
     docker:
       - image: circleci/node:13.8.0
     steps:
-      - run: echo hello
+      - run: echo $ABC
+    environment:
+      ABC: red
   print_world:
     docker:
       - image: circleci/node:13.8.0
