--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,23 +6,22 @@ orbs:
   welcome: circleci/welcome-orb@0.4.1
 # Orchestrate or schedule a set of jobs
 jobs:
+  save_hello:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - run: echo "text to output here" > output.txt
   print_hello:
     docker:
       - image: circleci/node:13.8.0
     steps:
-      - run: echo $ABC
-  print_world:
-    docker:
-      - image: circleci/node:13.8.0
-    steps:
-      - run: echo world
+      - run: cat output.txt
 workflows:
   # Name the workflow "welcome"
   welcome:
     # Run the welcome/run job in its own container
     jobs:
-      - welcome/run
-      - print_hello
-      - print_world:
+      - save_hello
+      - print_hello:
           requires:
-            - print_hello
+            - save_hello
