--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,12 +10,18 @@ jobs:
     docker:
       - image: circleci/node:13.8.0
     steps:
-      - run: echo "text to output here" > output.txt
+      - run: echo "hello world" > ~/output.txt
+      - persist_to_workspace:
+          root: ~/
+          paths:
+            - output.txt
   print_hello:
     docker:
       - image: circleci/node:13.8.0
     steps:
-      - run: cat output.txt
+      - attach_workspace:
+          at: ~/
+      - run: cat ~/output.txt
 workflows:
   # Name the workflow "welcome"
   welcome:
