--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,50 +1,17 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-# Use a package of configuration called an orb.
-orbs:
-  # Declare a dependency on the welcome-orb
-  welcome: circleci/welcome-orb@0.4.1
-# Orchestrate or schedule a set of jobs
+
 jobs:
-  save_hello:
+  my_job:
     docker:
       - image: circleci/node:13.8.0
     steps:
-      - run: echo "hello world" > ~/output.txt
-      - persist_to_workspace:
-          root: ~/
-          paths:
-            - output.txt
-  print_hello:
-    docker:
-      - image: circleci/node:13.8.0
-    steps:
-      - attach_workspace:
-          at: ~/
-      - run: cat ~/output.txt
-  save_cache:
-    working_directory: ~/hieu
-    docker:
-      - image: circleci/node:13.8.0
-    steps:
-      - checkout
-      - save_cache:
-          key: v1-my-project-{{ checksum "a.js" }}
-          paths:
-            - ~/.m2
-      - restore_cache:
-          keys:
-            - v1-my-project-{{ checksum "a.js" }}
-            - v1-my-project-
+      - run: exit 1
+      - run:
+          name: on error
+          command: echo "Hello Error!"
+          when: on_fail
+
 workflows:
-  # Name the workflow "welcome"
-  welcome:
-    # Run the welcome/run job in its own container
+  my_workflow:
     jobs:
-      - save_hello
-      - print_hello:
-          requires:
-            - save_hello
-      - save_cache:
-         requires:
-           - print_hello
+      - my_job
